[gd_scene load_steps=19 format=3 uid="uid://bhd0vt62ieptk"]

[ext_resource type="Script" uid="uid://xkvrosnbkyye" path="res://Scripts/XRSetup.gd" id="1_vy5pj"]
[ext_resource type="Script" uid="uid://cxbbogbfayssb" path="res://Scripts/Controller.gd" id="2_bmxlf"]
[ext_resource type="PackedScene" uid="uid://nlq6b04paf8r" path="res://Assets/OculusQuest2TouchController_Left.gltf" id="3_4kpch"]
[ext_resource type="Material" uid="uid://d08gsfhhpvgi2" path="res://Materials/Teal.tres" id="4_grg3l"]
[ext_resource type="Script" uid="uid://bhcfhip2118cd" path="res://Scripts/LineRenderer.gd" id="5_frkhe"]
[ext_resource type="PackedScene" uid="uid://c3ymxjtapjv1o" path="res://Assets/OculusQuest2TouchController_Right.gltf" id="6_1p5hy"]
[ext_resource type="Material" uid="uid://dmgt5k8kwj6v8" path="res://Materials/Orange.tres" id="7_h1m7h"]
[ext_resource type="Script" uid="uid://dobqxy6yfix07" path="res://Scripts/CubeSpawner.gd" id="8_erwvk"]
[ext_resource type="PackedScene" uid="uid://bhwkc33jtw86d" path="res://Scenes/Cube.tscn" id="9_2w5on"]
[ext_resource type="AudioStream" uid="uid://b6ti4xvn517ge" path="res://Audio/crate-break.mp3" id="10_bmxlf"]
[ext_resource type="AudioStream" uid="uid://bqy8qqpterjj0" path="res://Audio/music.mp3" id="11_4kpch"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_21xkr"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ynf5e"]
height = 1.001
radius = 0.1

[sub_resource type="ImmediateMesh" id="ImmediateMesh_6bp64"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6bp64"]
height = 1.001
radius = 0.1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4kpch"]
sky_top_color = Color(0.0157052, 0.135714, 0.157277, 1)
sky_horizon_color = Color(0.100458, 0.193619, 0.182431, 1)
ground_bottom_color = Color(0.0311501, 0.1037, 0.12173, 1)
ground_horizon_color = Color(0.0334621, 0.132727, 0.134602, 1)
sun_angle_max = 37.71
sun_curve = 0.791704

[sub_resource type="Sky" id="Sky_grg3l"]
sky_material = SubResource("ProceduralSkyMaterial_4kpch")

[sub_resource type="Environment" id="Environment_jjvhh"]
background_mode = 2
sky = SubResource("Sky_grg3l")

[node name="Main" type="Node3D"]

[node name="XROrigin3D" type="XROrigin3D" parent="."]
script = ExtResource("1_vy5pj")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
script = ExtResource("2_bmxlf")

[node name="QuestControllerModel" parent="XROrigin3D/LeftController" instance=ExtResource("3_4kpch")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="LineRenderer" type="MeshInstance3D" parent="XROrigin3D/LeftController"]
material_override = ExtResource("4_grg3l")
mesh = SubResource("ImmediateMesh_21xkr")
script = ExtResource("5_frkhe")

[node name="Area3D" type="Area3D" parent="XROrigin3D/LeftController"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/LeftController/Area3D"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -0.5)
shape = SubResource("CylinderShape3D_ynf5e")

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
script = ExtResource("2_bmxlf")

[node name="QuestControllerModel" parent="XROrigin3D/RightController" instance=ExtResource("6_1p5hy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="LineRenderer" type="MeshInstance3D" parent="XROrigin3D/RightController"]
material_override = ExtResource("7_h1m7h")
mesh = SubResource("ImmediateMesh_6bp64")
script = ExtResource("5_frkhe")

[node name="Area3D" type="Area3D" parent="XROrigin3D/RightController"]
collision_layer = 65536
collision_mask = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/RightController/Area3D"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -0.5)
shape = SubResource("CylinderShape3D_6bp64")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jjvhh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182521, 0)

[node name="CubeSpawner" type="Node3D" parent="."]
script = ExtResource("8_erwvk")
cube_scene = ExtResource("9_2w5on")
even_material = ExtResource("7_h1m7h")
odd_material = ExtResource("4_grg3l")

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_bmxlf")
volume_db = 10.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_4kpch")
autoplay = true

[connection signal="button_pressed" from="XROrigin3D/LeftController" to="XROrigin3D/LeftController" method="_on_ax_button_pressed"]
[connection signal="area_entered" from="XROrigin3D/LeftController/Area3D" to="XROrigin3D/LeftController" method="_on_area_3d_area_entered"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_ax_button_pressed"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_button_pressed"]
[connection signal="area_entered" from="XROrigin3D/RightController/Area3D" to="XROrigin3D/RightController" method="_on_area_3d_area_entered"]
